syntax = "proto2";

package refer_member;

service ReferMember {
  rpc GetMemberById(UserIdRequest) returns (MemberReply) {}
  rpc GetMyReferral(UserIdRequest) returns (MemberReply) {}
  rpc GetMyReferees(UserIdRequest) returns (MemberListReply) {}
  rpc UpdateMember(UpdateMemberRequest) returns (ProcessStatusReply) {}
  rpc BindReferral(BindReferralRequest) returns (ProcessStatusReply) {}
}

message UserIdRequest {
  required string id = 1;
}

message UpdateMemberRequest {
  required string userId = 1;
  required string memberType = 2;
  required int32 level = 3;
  required bool active = 4;
  required string description = 5;
}

message BindReferralRequest {
  required string userId = 1;
  required string referralId = 2;
}

message ProcessStatusReply {
  required string code = 1;
  required string message = 2;
  required bool success = 3;
  required string processId = 4;
}

message MemberReply {
  required string code = 1;
  required string message = 2;
  optional Member data = 3;
}

message MemberListReply {
  required string code = 1;
  required string message = 2;
  repeated Member data = 3;
}

message Member {
  required string userId = 1;
  required string userName = 2;
  required string memberType = 3;
  required int32 level = 4;
  required int32 hierarchy = 5;
  required bool active = 6;
  required string description = 7;
  required string createdAt = 8;
}